--- a/src/index.html
+++ b/src/index.html
@@ -11,5 +11,8 @@
 </head>
 <body>
   <app-root>Loading...</app-root>
+
+
+  <script src="https://use.fontawesome.com/061d7e5011.js"></script>
 </body>
 </html>
